# I_experiment

./: .gitignore  CMakeLists.txt  README  README.md  doremi.c  format.sh  read_data  read_data.c  read_data2.c  recv.txt  sin.c
data/: doremi.data  doremi.raw  sin.data  sin.raw  sound.data  sound.raw  voice.data  voice.raw
etc/: request  response
play-rs/: Cargo.toml
play-rs/src/: main.rs
scripts/: a.gpl  assign4-1.sh  assign4-3.sh  assign4-4.sh  assign4-5.sh  assign6-1.sh  assign8-1.sh  assign8-3.sh  doremi.sh  format.sh  listen_doremi.sh  listening-only.sh  play-doremi.sh  send_doremi.sh  speaking-only.sh
src/: bandpass.c  chat_server.c  client_recv.c  client_recv_udp.c  client_send_recv.c  client_send_recv_udp.c  doremi.c  downsample.c  fft.c  i1i2i3_phone.c  read_data.c  read_data2.c  serv_send.c  serv_send2.c  sin.c
src/lib/: encode.c  encode.h  network.c  network.h  params.h  setup_socket.c  setup_socket.h
src/old/: bandpass.c  client_recv.c  client_recv_udp.c  client_send_recv_udp.c  read_data.c  read_data2.c  serv_send.c
